--- a/Fake_job_posting_ML_Models.ipynb
+++ b/Fake_job_posting_ML_Models.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "id": "edd0b31a",
+   "execution_count": 162,
+   "id": "ff941286",
    "metadata": {},
    "outputs": [
     {
@@ -26,33 +26,44 @@
     }
    ],
    "source": [
+    "# Data manipulation and analysis\n",
     "import pandas as pd  # For data manipulation and analysis\n",
     "import numpy as np  # For numerical computations\n",
+    "\n",
+    "# Data visualization\n",
     "import matplotlib.pyplot as plt  # For creating visualizations\n",
-    "import seaborn as sns  # For advanced data visualizations \n",
+    "import seaborn as sns  # For advanced data visualizations\n",
+    "\n",
+    "# Machine learning and model building\n",
     "from sklearn.model_selection import train_test_split  # For splitting data into training and testing sets\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer  # For converting text data into numerical features\n",
     "from sklearn.preprocessing import LabelEncoder, StandardScaler  # For encoding categorical variables and scaling numerical data\n",
     "from sklearn.ensemble import RandomForestClassifier  # For building a classification model\n",
+    "from sklearn.svm import SVC  # For Support Vector Machine classifier\n",
+    "\n",
+    "# Model evaluation\n",
     "from sklearn.metrics import classification_report, confusion_matrix, roc_auc_score  # For evaluating the model's performance\n",
+    "\n",
+    "# Natural Language Processing (NLP)\n",
+    "import nltk  # For natural language processing tasks\n",
     "from nltk.corpus import stopwords  # For removing common stopwords in text preprocessing\n",
     "from nltk.tokenize import word_tokenize  # For tokenizing text into individual words\n",
     "from nltk.stem import WordNetLemmatizer  # For reducing words to their base form\n",
-    "import re  # For regular expressions used in text cleaning\n",
-    "import nltk  # For natural language processing tasks\n",
-    "import warnings  # For suppressing warnings\n",
-    "warnings.filterwarnings('ignore')  # Ignore warning messages\n",
     "nltk.download('omw-1.4')\n",
     "nltk.download('stopwords')  # Download stopwords for text preprocessing\n",
     "nltk.download('punkt')  # Download tokenizer for text preprocessing\n",
     "nltk.download('wordnet')  # Download WordNet lemmatizer for text preprocessing\n",
-    "from sklearn.svm import SVC  # Import Support Vector Machine classifier"
+    "\n",
+    "# Other utilities\n",
+    "import re  # For regular expressions used in text cleaning\n",
+    "import warnings  # For suppressing warnings\n",
+    "warnings.filterwarnings('ignore')  # Ignore warning messages\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "id": "4e79a90e",
+   "execution_count": 163,
+   "id": "a668d368",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "c11f67cf",
+   "id": "46613e8f",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "58c9e3c9",
+   "id": "159b0a14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "b0562f12",
+   "id": "d5b10d93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "29b011e7",
+   "id": "bae381d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "bd92dfc3",
+   "id": "81e1cae9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "07aad4b2",
+   "id": "b32d5b8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "1b19327a",
+   "id": "7d1e5ab2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "7d5fba4b",
+   "id": "6c50ddd1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "592c0a72",
+   "id": "c0c4844b",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "824be676",
+   "id": "3bd38f48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "724d0646",
+   "id": "0cfdece9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "4491d91c",
+   "id": "0629d0ed",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "12693c29",
+   "id": "fa67a058",
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "9fb1c11c",
+   "id": "2d840305",
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "7a0458a8",
+   "id": "fc8ef36e",
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "c5eafc70",
+   "id": "f9ee10ad",
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "5e1641d4",
+   "id": "dc87a0a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "299ef1fb",
+   "id": "555031b5",
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "7f261093",
+   "id": "83441158",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "e4c9d383",
+   "id": "d9e97251",
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "3075f5fc",
+   "id": "508d4908",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b26455c2",
+   "id": "9388cdea",
    "metadata": {},
    "outputs": [],
    "source": []
