--- a/Fake_job_posting_DL_Models.ipynb
+++ b/Fake_job_posting_DL_Models.ipynb
@@ -41,7 +41,7 @@
    "outputs": [],
    "source": [
     "# 1. Load the Dataset\n",
-    "data_path = r\"C:\\Users\\hewi7\\Dropbox\\PC\\Downloads\\Data Science Project\\fake_job_postings.csv\\fake_job_postings.csv\"\n",
+    "data_path = \"../src/dataset/fake_job_postings.csv\"\n",
     "df = pd.read_csv(data_path)"
    ]
   },
